Fix for font issue on mobile

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -66,6 +66,7 @@ figure {
   }
   .sub-header {
     font-size: 4em;
+    margin-top: 94px;
   }
 
 }
